# otus_cpp

./: lib.cpp
.github/workflows/: 01.CI_CD.yaml  02.ip_filter.yaml
01.CI_CD/: CMakeLists.txt  main.cpp  test_version.cpp
02.ip_filter/: CMakeLists.txt  ip.cpp  ip.h  ip_filter.cpp  ip_filter.tsv  utils.cpp  utils.h
